--- a/tasks/c-interpreter/config.json
+++ b/tasks/c-interpreter/config.json
@@ -1,6 +1,6 @@
 {
-  "coder_model": "gemini-2.5-pro",
-  "reviewer_model": "gemini-2.5-pro", 
+  "coder_model": "gemini-2.5-flash",
+  "reviewer_model": "gemini-2.5-flash", 
   "utility_model": "gemini-2.5-flash-lite",
   "max_rounds": 25,
   "basename": "interp"
