--- a/tasks/3d-ball/config.json
+++ b/tasks/3d-ball/config.json
@@ -1,5 +1,5 @@
 {
-  "coder_model": "gemini-2.5-flash",
+  "coder_model": "gemini-2.5-pro",
   "reviewer_model": "gemini-2.5-flash",
   "utility_model": "gemini-2.5-flash-lite",
   "max_rounds": 25,
