--- a/tasks/3d-ball/config.json
+++ b/tasks/3d-ball/config.json
@@ -1,7 +1,8 @@
 {
-  "coder_model": "gemini-2.5-pro",
+  "coder_model": "gemini-2.5-flash",
   "reviewer_model": "gemini-2.5-flash",
   "utility_model": "gemini-2.5-flash-lite",
   "max_rounds": 25,
-  "basename": "ball3d"
+  "basename": "ball3d",
+  "sandbox_method": "auto"
 }
