--- a/tasks/8-queens/config.json
+++ b/tasks/8-queens/config.json
@@ -3,5 +3,6 @@
   "reviewer_model": "gemini-2.5-flash", 
   "utility_model": "gemini-2.5-flash-lite",
   "max_rounds": 25,
-  "basename": "8queens"
+  "basename": "8queens",
+  "sandbox_method": "auto"
 }
