--- a/tasks/qr/config.json
+++ b/tasks/qr/config.json
@@ -1,8 +1,8 @@
 {
-  "coder_model": "gemini-2.5-pro",
+  "coder_model": "gemini-2.5-flash",
   "reviewer_model": "gemini-2.5-flash",
   "utility_model": "gemini-2.5-flash-lite",
-  "max_rounds": 25,
+  "max_rounds": 15,
   "basename": "qr",
   "sandbox_method": "auto",
   "commandline_args": "--test"
