--- a/tasks/upc/config.json
+++ b/tasks/upc/config.json
@@ -1,5 +1,5 @@
 {
-  "coder_model": "gemini-2.5-pro",
+  "coder_model": "gemini-2.5-flash",
   "reviewer_model": "gemini-2.5-flash",
   "utility_model": "gemini-2.5-flash-lite",
   "max_rounds": 15,
