--- a/tasks/8-queens/config.json
+++ b/tasks/8-queens/config.json
@@ -1,6 +1,6 @@
 {
-  "coder_model": "gemini-2.5-flash",
-  "reviewer_model": "gemini-2.5-flash", 
+  "coder_model": "gemini-2.5-flash-lite",
+  "reviewer_model": "gemini-2.5-flash-lite", 
   "utility_model": "gemini-2.5-flash-lite",
   "max_rounds": 25,
   "basename": "8queens",
