--- a/tasks/3d-ball/config.json
+++ b/tasks/3d-ball/config.json
@@ -1,7 +1,7 @@
 {
-  "coder_model": "gemini-2.5-flash",
-  "reviewer_model": "gemini-2.5-flash",
-  "utility_model": "gemini-2.5-flash-lite",
+  "coder_model": "gemini-flash-latest",
+  "reviewer_model": "gemini-3-pro-preview",
+  "utility_model": "gemini-flash-lite-latest",
   "max_rounds": 25,
   "basename": "ball3d",
   "sandbox_method": "auto",
