--- a/tasks/upc/config.json
+++ b/tasks/upc/config.json
@@ -1,7 +1,7 @@
 {
   "coder_model": "gemini-2.5-flash",
   "reviewer_model": "gemini-2.5-flash",
-  "utility_model": "gemini-2.5-flash-lite",
+  "utility_model": "gemini-2.5-flash",
   "max_rounds": 15,
   "basename": "upc",
   "sandbox_method": "firejail",
