--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Production dependencies
 google-genai>=1.0.0
 python-Levenshtein>=0.20.0
+fastmcp>=2.14.1
 
 # Development dependencies
 pytest>=9.0.0
